$Revision$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-07-05 [A] Added search terms to the title of the thumbnails page (thread ID 65840) {eenemeenemuu}
2010-07-05 [A] Added Japanese language file (user contribution) {GauGau}
2010-07-02 [D] Adding boxes to config documentation for defaults, max, min, recomended and record name (work in progress) {GauGau}
2010-06-30 [B] Display Coppermine news always in an iframe (thread ID 65424) {eenemeenemuu}
2010-06-29 [B] Fixed error message for non existing categories (thread ID 65763) {eenemeenemuu}
2010-06-26 [B] Replaced wrong link in update.php (thread ID 65714) {GauGau}
2010-06-25 [B] Added language table population section to update script to stop cpg1.4.x upgrades seing only Luxemburgish and Mexican as available langauges {GauGau}
2010-06-25 [O] Updated Turkish language file (user contribution) {eenemeenemuu}
2010-06-24 [A] Show password prompt if user tries to access file in password protected album directly {eenemeenemuu}
2010-06-24 [A] Added Brazilian language file (user contribution) {eenemeenemuu}
2010-06-24 [B] Fixed uploading to password protected albums in public categories (thread ID 65677) {eenemeenemuu}
2010-06-22 [B] Changed default values for user galleries category (thread ID 65543) {eenemeenemuu}
2010-06-21 [B] Fixed album visibility issue with user galleries (thread ID 65543) {Nibbler}
2010-06-21 [B] Changed fix for category alpha sorting {Nibbler}
2010-06-21 [B] Fixed a critical error with the most viewed meta album {Nibbler}
2010-06-21 [O] Updated French language file (improvement and corrections){Frantz}