@@ -23,6 +23,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2010-07-05 [B] Changed type of plugin hooks 'theme_thumbnails_wrapper_start/end' from 'filter' to 'action' and adjusted English documentation accordingly (thread ID 58734) {eenemeenemuu}
 2010-07-05 [A] Added search terms to the title of the thumbnails page (thread ID 65840) {eenemeenemuu}
 2010-07-05 [A] Added Japanese language file (user contribution) {GauGau}
 2010-07-02 [D] Adding boxes to config documentation for defaults, max, min, recomended and record name (work in progress) {GauGau}
